--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,14 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:16-alpine
-    container_name: palate-postgres
+    container_name: palateful-postgres
     restart: unless-stopped
     ports:
       - '5432:5432'
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: palate
+      POSTGRES_DB: palateful
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
