--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "palate",
+  "name": "palateful",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.14.0",
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "^5.22.0",
     "clsx": "^2.1.1",
     "next": "16.1.1",
     "react": "19.2.3",
@@ -25,7 +25,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
-    "prisma": "^7.2.0",
+    "prisma": "^5.22.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
