--- a/services/migrator/Dockerfile
+++ b/services/migrator/Dockerfile
@@ -1,11 +1,10 @@
 # syntax=docker/dockerfile:1
-# Keep this syntax directive! It's used to enable Docker BuildKit
 
 ################################
 # PYTHON-BASE
 # Sets up all our shared environment variables
 ################################
-FROM python:3.13-slim AS python-base
+FROM python:3.13-slim as python-base
 
     # python
 ENV PYTHONUNBUFFERED=1 \
@@ -18,7 +17,7 @@ ENV PYTHONUNBUFFERED=1 \
     \
     # poetry
     # https://python-poetry.org/docs/configuration/#using-environment-variables
-    POETRY_VERSION=2.1.1 \
+    POETRY_VERSION=2.2.1 \
     # make poetry install to this location
     POETRY_HOME="/opt/poetry" \
     # make poetry create the virtual environment in the project's root
@@ -29,26 +28,27 @@ ENV PYTHONUNBUFFERED=1 \
     \
     # paths
     # this is where our requirements + virtual environment will live
-    DOCKER_SERVICE_ROOT="/services/api" \
-    LOCAL_SERVICE_ROOT="services/api" \
-    VENV_PATH="/services/api/.venv"
+    DOCKER_SERVICE_ROOT="/services/migrator" \
+    LOCAL_SERVICE_ROOT="services/migrator" \
+    VENV_PATH="/services/migrator/.venv"
 
 
 # prepend poetry and venv to path
 ENV PATH="$POETRY_HOME/bin:$VENV_PATH/bin:$PATH"
 
+
 ################################
 # BUILDER-BASE
 # Used to build deps + create our virtual environment
 ################################
-FROM python-base AS builder-base
+FROM python-base as builder-base
 RUN apt-get update \
     && apt-get install --no-install-recommends -y \
         # deps for installing poetry
         curl \
         # deps for building python deps
         build-essential \
-        # deps for building psycopg2 from source if needed
+        # deps for building psycopg2 from source (required for Python 3.14)
         libpq-dev
 
 # install poetry - respects $POETRY_VERSION & $POETRY_HOME
@@ -64,51 +64,19 @@ RUN poetry install --only main --no-root
 
 
 ################################
-# DEVELOPMENT
-# Image used during development / testing
+# MIGRATOR
+# Image used for performing migrations
 ################################
-FROM python-base AS development
-ENV FASTAPI_ENV=development
-WORKDIR $DOCKER_SERVICE_ROOT
+FROM python-base as migrator
 
-# copy in our built poetry + venv
-COPY --from=builder-base $POETRY_HOME $POETRY_HOME
 COPY --from=builder-base $DOCKER_SERVICE_ROOT $DOCKER_SERVICE_ROOT
-COPY --from=builder-base /libraries/utils /libraries/utils
-
-# quicker install as runtime deps are already installed
-# Use --only main to exclude test dependencies that have path references
-RUN poetry install --only main --no-root
-
-# will become mountpoint of our code
-WORKDIR ./src
-
-ENV PYTHONPATH="$DOCKER_SERVICE_ROOT/src"
-
-EXPOSE 8000
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
-
-
-################################
-# PRODUCTION
-# Final image used for runtime
-################################
-FROM python-base AS production
-ENV FASTAPI_ENV=production
-
-WORKDIR $DOCKER_SERVICE_ROOT
-
-# Copy only the virtual environment (contains all runtime dependencies)
-COPY --from=builder-base $VENV_PATH $VENV_PATH
 # Copy library dependencies needed for editable installs
 COPY --from=builder-base /libraries/utils /libraries/utils
 
-# Copy application code
-COPY $LOCAL_SERVICE_ROOT/src $DOCKER_SERVICE_ROOT/src/
+COPY $LOCAL_SERVICE_ROOT/migrations $DOCKER_SERVICE_ROOT/migrations
+COPY $LOCAL_SERVICE_ROOT/alembic.ini $DOCKER_SERVICE_ROOT/
 
-WORKDIR $DOCKER_SERVICE_ROOT/src
+WORKDIR $DOCKER_SERVICE_ROOT
 
-ENV PYTHONPATH="$DOCKER_SERVICE_ROOT/src"
-
-EXPOSE 8000
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+ENTRYPOINT ["alembic"]
+CMD ["upgrade", "head"]
