--- a/libraries/utils/pyproject.toml
+++ b/libraries/utils/pyproject.toml
@@ -1,20 +1,57 @@
-[tool.poetry]
-name = "palateful-utils"
-version = "0.1.0"
-description = "Shared utilities for Palateful services"
-authors = ["Leonid Belyi"]
-packages = [{include = "palateful_utils", from = "src"}]
+[tool.coverage.run]
+branch = true
+source = [ "utils" ]
 
-[tool.poetry.dependencies]
-python = "^3.13"
-sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
-asyncpg = "^0.30"
-pgvector = "^0.4"
-pydantic = "^2.0"
-pydantic-settings = "^2.0"
-python-jose = {extras = ["cryptography"], version = "^3.3"}
-httpx = "^0.28"
-redis = "^5.0"
+[tool.coverage.report]
+exclude_lines = ['if TYPE_CHECKING:', 'if catalyst:', 'pragma: no cover']
+show_missing = true
+
+[tool.pytest.ini_options]
+addopts = "--cov --cov-report html:'../../coverage/libraries/utils/html' --cov-report xml:'../../coverage/libraries/utils/coverage.xml' --html='../../reports/libraries/utils/unittests/html/index.html' --junitxml='../../reports/libraries/utils/unittests/junit.xml'"
+
+[tool.poetry]
+name = "utils"
+version = "1.0.0"
+description = "Utility library for database operations and other data services in Palateful"
+authors = [ ]
+license = 'Proprietary'
+readme = 'README.md'
+exclude = [
+    "utils/.pytest_cache",
+    "utils/.coverage",
+    "utils/__pycache__",
+    "**/.pytest_cache/**",
+    "**/*.pyc"
+]
+
+  [[tool.poetry.packages]]
+  include = "utils"
+
+  [tool.poetry.dependencies]
+  python = "^3.13"
+  sqlalchemy = "^2.0.44"
+  ddtrace = "^3.17.1"
+  celery = {extras = ["sqs"], version = "^5.5.3"}
+  boto3 = "^1.40.61"
+  requests = "^2.32.5"
+  openai = "^2.8.1"
+  tabulate = "^0.9.0"
+  tenacity = "^9.1.2"
+  tiktoken = "^0.12.0"
+  urllib3 = "^2.6.3"
+  gql = {extras = ["all"], version = "^3.5.2"}
+  fastapi = "^0.120.2"
+  python-dotenv = "^1.1.0"
+  h11 = ">=0.16.0"
+  openai-agents = "^0.6.1"
+  pinecone = {extras = ["grpc"], version = "^7.3.0"}
+  llama-index-core = "^0.12.50"
+  pillow = ">=11.3.0"
+  starlette = "^0.49.1"
+  wayfound = "^2.5.0"
+
+# [tool.poetry.group.test.dependencies]
+# test-helper = { path = "../../libraries/test-helper", develop = true }
 
 [build-system]
 requires = ["poetry-core"]
