--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "@nx-tools/nx-container": "^7.2.0",
+    "@nx/devkit": "22.3.3",
     "@nx/js": "22.3.3",
     "@nx/workspace": "22.3.3",
-    "nx": "22.3.3"
+    "dotenv": "^17.2.3",
+    "nx": "22.3.3",
+    "tslib": "^2.8.1"
   }
 }
