--- a/services/api/pyproject.toml
+++ b/services/api/pyproject.toml
@@ -7,20 +7,20 @@ packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.13"
-fastapi = "^0.115"
+fastapi = "^0.120"
 uvicorn = {extras = ["standard"], version = "^0.34"}
 sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
 asyncpg = "^0.30"
 pgvector = "^0.4"
-pydantic = "^2.0"
+pydantic = {extras = ["email"], version = "^2.0"}
 pydantic-settings = "^2.0"
 python-jose = {extras = ["cryptography"], version = "^3.3"}
 httpx = "^0.28"
 redis = "^5.0"
-openai = "^1.0"
+openai = "^2.8"
 sse-starlette = "^2.0"
 python-multipart = "^0.0.20"
-palateful-utils = {path = "../../libraries/utils", develop = true}
+utils = {path = "../../libraries/utils", develop = true}
 
 [build-system]
 requires = ["poetry-core"]
