--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_dotenv: ^6.0.0
   wakelock_plus: ^1.2.1
   web_socket_channel: ^3.0.1
+  firebase_core: ^3.9.0
+  firebase_messaging: ^15.2.0
 
 dev_dependencies:
   flutter_test:
