--- a/libraries/utils/pyproject.toml
+++ b/libraries/utils/pyproject.toml
@@ -50,6 +50,7 @@ exclude = [
   starlette = "^0.49.1"
   wayfound = "^2.5.0"
   pgvector = "^0.4"
+  firebase-admin = "^6.5.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.11"
