--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   web_socket_channel: ^3.0.1
   firebase_core: ^3.9.0
   firebase_messaging: ^15.2.0
+  image_picker: ^1.0.7
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
