--- a/services/parser/Dockerfile.gpu
+++ b/services/parser/Dockerfile.gpu
@@ -1,4 +1,4 @@
-# OCR Service Dockerfile with GPU support
+# Parser Service Dockerfile with GPU support
 # Requires NVIDIA Docker runtime
 
 FROM nvidia/cuda:12.1-runtime-ubuntu22.04
@@ -20,14 +20,14 @@ RUN update-alternatives --install /usr/bin/python python /usr/bin/python3.11 1
 RUN pip install poetry
 
 # Copy poetry files
-COPY services/ocr/pyproject.toml services/ocr/poetry.lock* ./
+COPY services/parser/pyproject.toml services/parser/poetry.lock* ./
 
 # Install dependencies
 RUN poetry config virtualenvs.create false \
     && poetry install --no-interaction --no-ansi --no-root
 
 # Copy application code
-COPY services/ocr/src ./src
+COPY services/parser/src ./src
 
 # Set environment variables
 ENV PYTHONPATH=/app
