--- a/services/parser/project.json
+++ b/services/parser/project.json
@@ -1,8 +1,8 @@
 {
-  "name": "ocr",
+  "name": "parser",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "sourceRoot": "services/ocr/src",
+  "sourceRoot": "services/parser/src",
   "targets": {
     "lock": {
       "executor": "nx:run-commands",
@@ -15,7 +15,7 @@
       "executor": "nx:run-commands",
       "options": {
         "commands": [
-          "docker build -t palateful-ocr:{args.tag} -f services/ocr/Dockerfile.gpu ."
+          "docker build -t palateful-parser:{args.tag} -f services/parser/Dockerfile.gpu ."
         ],
         "cwd": "{workspaceRoot}",
         "parallel": false
@@ -23,7 +23,7 @@
       "configurations": {
         "production": {
           "commands": [
-            "docker build -t palateful-ocr:latest -f services/ocr/Dockerfile.gpu --no-cache ."
+            "docker build -t palateful-parser:latest -f services/parser/Dockerfile.gpu --no-cache ."
           ]
         }
       },
@@ -43,8 +43,8 @@
       "dependsOn": ["build", "docker-login"],
       "options": {
         "commands": [
-          "docker tag palateful-ocr:{args.tag} $(aws sts get-caller-identity --query Account --output text).dkr.ecr.${AWS_REGION:-us-east-1}.amazonaws.com/palateful-ocr:{args.tag}",
-          "docker push $(aws sts get-caller-identity --query Account --output text).dkr.ecr.${AWS_REGION:-us-east-1}.amazonaws.com/palateful-ocr:{args.tag}"
+          "docker tag palateful-parser:{args.tag} $(aws sts get-caller-identity --query Account --output text).dkr.ecr.${AWS_REGION:-us-east-1}.amazonaws.com/palateful-parser:{args.tag}",
+          "docker push $(aws sts get-caller-identity --query Account --output text).dkr.ecr.${AWS_REGION:-us-east-1}.amazonaws.com/palateful-parser:{args.tag}"
         ],
         "cwd": "{workspaceRoot}",
         "parallel": false
@@ -55,7 +55,7 @@
       "dependsOn": ["push"],
       "options": {
         "commands": [
-          "echo 'OCR container deployed to ECR. Submit jobs with: nx run ocr:submit-job'"
+          "echo 'Parser container deployed to ECR. Submit jobs with: nx run parser:submit-job'"
         ]
       }
     },
@@ -63,7 +63,7 @@
       "executor": "nx:run-commands",
       "options": {
         "commands": [
-          "aws batch submit-job --job-name ocr-$(date +%Y%m%d-%H%M%S) --job-queue palateful-ocr-queue-${ENVIRONMENT:-dev} --job-definition palateful-ocr-job-${ENVIRONMENT:-dev} --container-overrides '{\"environment\": [{\"name\": \"INPUT_S3_URI\", \"value\": \"{args.input}\"}, {\"name\": \"OUTPUT_S3_URI\", \"value\": \"{args.output}\"}]}'"
+          "aws batch submit-job --job-name parser-$(date +%Y%m%d-%H%M%S) --job-queue palateful-parser-queue-${ENVIRONMENT:-dev} --job-definition palateful-parser-job-${ENVIRONMENT:-dev} --container-overrides '{\"environment\": [{\"name\": \"INPUT_S3_URI\", \"value\": \"{args.input}\"}, {\"name\": \"OUTPUT_S3_URI\", \"value\": \"{args.output}\"}]}'"
         ]
       }
     },
@@ -71,7 +71,7 @@
       "executor": "nx:run-commands",
       "options": {
         "commands": [
-          "aws s3 cp {args.file} s3://palateful-ocr-inputs-${ENVIRONMENT:-dev}/{args.key}"
+          "aws s3 cp {args.file} s3://palateful-parser-inputs-${ENVIRONMENT:-dev}/{args.key}"
         ]
       }
     },
@@ -81,14 +81,14 @@
         "commands": [
           "poetry run uvicorn src.main:app --host 0.0.0.0 --port 8001 --reload"
         ],
-        "cwd": "services/ocr"
+        "cwd": "services/parser"
       }
     },
     "install": {
       "executor": "nx:run-commands",
       "options": {
         "commands": ["poetry install"],
-        "cwd": "services/ocr"
+        "cwd": "services/parser"
       }
     },
     "lint": {
@@ -102,9 +102,9 @@
       "executor": "nx:run-commands",
       "options": {
         "commands": ["poetry run pytest"],
-        "cwd": "services/ocr"
+        "cwd": "services/parser"
       }
     }
   },
-  "tags": ["service", "python", "ocr"]
+  "tags": ["service", "python", "parser"]
 }
